...
    }
    
    var body: some View {
        content
            .dialog(dialogModel: 
                        ResultModel(
                            title: "Vuoi uscire dall’operazione in corso?",
                            subtitle: "L’operazione verrà annullata e sarà necessario ricominciare da capo.",
                            themeType: .light,
                        buttons: [
                            ButtonModel(type: .primary, themeType: .light, title: "Annulla", action: {
                                var transaction = Transaction()
                                transaction.disablesAnimations = true
                                withTransaction(transaction) {
                                    isPresentingDialog = false
                                }
                            }),
                            ButtonModel(type: .plain, themeType: .light, title: "Esci dal pagamento", action: {
                                isPresentingDialog = false
                                isDeletingTransaction = true

                                Task {
                                    do {
                                        let deleted = try await networkClient.deleteTransaction(milTransactionId: transactionId)
...
                                }
                            })
                        ]),
                    isPresenting: $isPresentingDialog)
            .dialog(dialogModel: 
                        ResultModel(
                            title: "Si è verificato un errore imprevisto",
                            subtitle: "Per assistenza visita il sito pagopa.gov.it/assistenza oppure chiama il numero 06.4520.2323.",
                            themeType: .light,
                            buttons: [
                                ButtonModel(type: .primary, themeType: .light, title: "Ok, ho capito", action: {
                                    isPresentingError = false
                                })
                            ]),
                    isPresenting: $isPresentingError)
            .showLoadingView(message: Binding<String> (
                get: {"Annullamento della transazione in corso.."},
...
