...
    var body: some View {
        
        VStack {
            VStack(spacing: 0) {
                VStack {
                    VStack(alignment: .leading) {
                        Text("Confermi l'operazione?")
                            .font(.PAFont.h3)
                            .padding(.vertical, Constants.mediumSpacing)
                        ListItem(title: "IMPORTO DEL BENE", subtitle: viewModel.transaction.goodsCost.formattedCurrency)
                        Divider()
                        ListItem(
                            title: "INIZIATIVA",
...
            Spacer()
            FooterButtonsView(
                buttons:
                    [ButtonModel(
                        type: .primaryBordered,
                        themeType: .light,
                        title: "Nega",
                        action: {
                            Task {
                                do {
                                    showRetry = true
                                    try await viewModel.deleteTransaction()
                                    showResultView()
...
                            }
                        }
                    ),
                     ButtonModel(
                        type: .primary,
                        themeType: .light,
                        title: "Conferma",
                        action: {
                            router.pushTo(
                                .pin(
                                    viewModel: CIEPinViewModel(
                                        networkClient: viewModel.networkClient,
                                        transaction: viewModel.transaction,
...
        .showLoadingView(message: $viewModel.loadingStateMessage, isLoading: $viewModel.isLoading)
        
    }
    
    func showResultView() {
        router.pushTo(.thankyouPage(result: ResultModel(
            title: "L'operazione è stata annullata",
            themeType: .warning,
            buttons: [
                ButtonModel(
                    type: .primary,
                    themeType: .warning,
                    title: "Accetta nuovo bonus",
...
                        router.pop(to:.initiatives(viewModel: InitiativesViewModel(networkClient: viewModel.networkClient)))
                    }
                ),
                ButtonModel(
                    type: .primaryBordered,
                    themeType: .warning,
                    title: "Riprova",
                    action: {
                        Task {
                            // Repeat createTransaction and go to verifyCIE
                            repeatTransactionCreate(viewModel: viewModel, router: router)
                        }
                    }
...
