...
        VStack(spacing: Constants.smallSpacing) {
            
            Text("IDENTIFICAZIONE CON CIE")
                .foregroundColor(.paPrimary)
                .font(.PAFont.caption)
            
            Text("Appoggia la CIE sul dispositivo, in alto")
                .multilineTextAlignment(.center)
                .foregroundColor(.paBlack)
                .font(.PAFont.h4)
                .padding(.bottom, Constants.xsmallSpacing)
            
            Image("cie", bundle: nil)
...
            } catch {
                switch error {
                case HTTPResponseError.maxRetriesExceeded, HTTPResponseError.coveredAmountInconsistent:
                    router.pushTo(
                        .thankyouPage(
                            result: ResultModel(
                                title: "La sessione è scaduta",
                                subtitle:"Se vuoi procedere con il pagamento, prova ad autorizzarlo di nuovo.",
                                icon: .pendingDark,
                                themeType: .info,
                                buttons: [
                                    ButtonModel(
                                        type: .primary,
...
